wp-content/themes/impruwclientparent/css/less/builder.less
/* ... */
/****Builder Settings Box Styles****/
#settings-region {
	position: fixed;
	top: 50%;
	left: 40%;
}

.settings-box {
	width: 400px;
	box-shadow: 10px 10px 0 0 rgba(0, 0, 0, 0.25);
	border-radius: 2px;
	.settings-header {
		border-bottom: 1px solid #ebedef;
		margin: 0 0 0.5em;
		padding: 0 0.5em;
		background: @preview-grey;
		cursor: move;
		border-radius: 2px 2px 0 0;
		h5 {
			color: @dash-grey;
			font-size: 1.1em;
		}
		.close-btn {
			text-align: right;
			a {
				color: @dash-grey;
				font-size: 1.3em;
				font-weight: bold;
				&:hover {
					color: darken(@dash-grey, 10%);
				}
			}
		}
	}
	.form-horizontal {
		.form-group {
			.control-label {
				color: @dash-grey;
				font-weight: normal;
			}
			.form-control {
				width: 220px;
			}
			.checkbox {
				margin-top: 8px;
				.icons {
					line-height: 20px;
					.first-icon, .second-icon {
						border-radius: 5px;
					}
				}
			}
			.set-column-count {
				padding-top: 7px;
				a {
					margin-right: 1px;
					padding: 1px 8px;
					&:hover, &.selected {
						background: @orange;
						color: #fff;
					}
				}
			}
			.colors {
				margin: 0.75em 0;
				span {
					width: 20px;
					height: 20px;
					display: inline-block;
					margin: 0.1em;
					border: 2px solid #fff;
					cursor: pointer;
					&.selected {
						border-color: @orange;
					}
					&:hover {
						box-shadow: 1px 1px 1px 0px @dash-grey;
					}
				}
			}
			.field-error {
				color: @error-red;
				padding: 0.5em 0;
			}
			.help-block {
				padding: 0 1em;
				color: @dash-grey;
				font-size: 0.88em;
				font-style: italic;
				text-align: center;
				margin-bottom: 0;
			}
		}
	}
	.collapse-link {
		display: inline-block;
		color: @dash-grey;
		font-size: 0.88em;
		margin-bottom: 0.75em;
		&:hover, &:focus {
			color: @blue-grey;
		}
	}
}

/****Builder Element Layout Mode Styles****/
.aj-imp-builder-layout-mode {
	[class^="aj-imp-elem-"] {
		background: #fff;
		height: 100%;
		text-align: center;
		color: @blue-grey;
		border: 1px dotted @blue-grey;
		margin: 0.5em;
		padding: 0.5em;
		box-sizing: border-box;
		position: relative;
		> [class^="icon-"] {
			font-size: 3em;
		}
		.aj-imp-descriptor {
			text-transform: uppercase;
			font-size: 1.5em;
		}
		&:hover {
			color: @orange;
			border: 1px solid @orange;
			.aj-imp-drag-handle, .aj-imp-delete-btn {
				display: block !important;
			}
		}
	}
}

/****Builder Element Mode Display Element Styles****/
.aj-imp-builder-layout-mode {
	.content {
		display: none;
	}
	.aj-element-setting-tooltip{
		display: none !important;
	}
}

.aj-imp-builder-content-mode {
	.layout, .aj-imp-delete-btn, .aj-imp-drag-handle {
		display: none;
	}
	.aj-imp-drag-handle {
		position: absolute;
		top: -10px;
		left: 0;
		height: 20px;
		width: 100%;
		text-align: center;
		a {
			cursor: move;
			width: 60px;
			margin: auto;
			display: block;
			color: @orange !important;
			font-size: 20px;
			line-height: 20px !important;
			background: #fff;
			border: 1px solid @orange;
			border-radius: 3px;
			&:hover {
				background: @orange;
				color: #fff !important;
			}
		}
	}
	.aj-element-setting-tooltip {
		top: -3.6em;
        display: none;
		.tooltip-arrow {
			border-top-color: #29333F;
			left: 2em;
		}
		.tooltip-inner {
			width: auto;
			/*min-width: 250px;*/
			max-width: 300px;
			background: #29333F;
			label {
				display: inline-block;
				margin: 0;
				padding: 0 0.5em;
				position: relative;
				top: -3px;
			}
			ul {
				display: inline-block;
				list-style: none;
				margin: 0;
				padding: 0;
				li {
					float: left;
					margin: 0 0.05em;
					a {
						padding: 0.3em 0.5em;
						color: #fff;
						border-radius: 3px;
						font-weight: 700;
					}
					&:hover, &.active {
						a {
							background: @orange;
						}
					}
				}
			}
		}
	}
}

/****Content Mode Edit Controls****/
.aj-imp-preview {
	.aj-imp-edit-content {
		position: relative;
		padding: 0.2em;
		border: 1px solid transparent;
		&[contenteditable=true], [contenteditable=true] {
			&:empty:before {
				content: attr(placeholder);
				color: lighten(@dash-grey, 10%);
			}
			&:focus {
				box-shadow: inset 0 0 4px lighten(@blue-grey, 10%);
				background: lighten(@blue-grey, 38%);
				border-radius: 5px;
				padding: 5px;
				outline: 0;
				transition-duration: 0.2s;
			}
		}
		.aj-imp-edit-controls {
			display: none;
			position: absolute;
			z-index: 100;
			background: rgba(255, 255, 255, 0);
			top: 0;
			left: 0;
			right: 0;
			text-align: center;
			border-bottom: 1px solid @preview-grey;
			cursor: text;
			.aj-imp-drag-handle {
				position: absolute;
				top: -10px;
				left: 0;
				height: 20px;
				width: 100%;
				text-align: center;
				a {
					cursor: move;
					width: 60px;
					margin: auto;
					display: block;
					color: @orange !important;
					font-size: 20px;
					line-height: 20px !important;
					background: #fff;
					border: 1px solid @orange;
					border-radius: 3px;
					&:hover {
						background: @orange;
						color: #fff !important;
					}
				}
			}
		}
		&:hover {
			border: 1px dotted @orange;
			.aj-imp-edit-controls {
				display: block;
			}
		}
	}
}

/****Modal Styles****/
.modal-backdrop {
	background: @3-grey; 
}

.modal-help-text {
	padding: 0.75em 1em 1em 36px;
	background: @preview-grey;
	border-left: 3px solid @blue-grey;
	color: @dash-grey;
	margin: 0.75em 20px;
	font-size: 0.88em;
	position: relative;
	.glyphicon {
		color: darken(@preview-grey, 10%);
		font-size: 2em;
		top: 3px;
		position: absolute;
		left: 6px;
		top: 6px;
	}
	&:hover {
		box-shadow: 1px 1px 2px darken(@preview-grey, 10%);
		border-color: @orange;
		.glyphicon {
			color: darken(@preview-grey, 15%);
		}
	}
}
/* ... */

